GitVersion1/objects/Cres_Master_Potential__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Potentials</relationshipLabel>
        <relationshipName>Master_Potentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calculation_Category__c</fullName>
        <formula>if(OR(ISPICKVAL(Estimation_Type__c,&apos;Simple Potential Estimate&apos;),ISPICKVAL(Estimation_Type__c,&apos;Cycle Consumption&apos;),
ISPICKVAL(Estimation_Type__c,&apos;Daily Animal Consumption&apos;)),&apos;Volume&apos;,
if(OR(ISPICKVAL(Estimation_Type__c,&apos;Simple Potential Estimate - CFE&apos;),ISPICKVAL(Estimation_Type__c,&apos;Cycle Consumption - CFE&apos;),
ISPICKVAL(Estimation_Type__c,&apos;Daily Animal Consumption - CFE&apos;)),&apos;CFE&apos;,&apos;Unknown&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculation Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Potential Estimate</fullName>
                </value>
                <value>
                    <fullName>Cycle Consumption</fullName>
                </value>
                <value>
                    <fullName>Daily Animal Consumption</fullName>
                </value>
                <value>
                    <fullName>Simple Potential Estimate - CFE</fullName>
                </value>
                <value>
                    <fullName>Cycle Consumption - CFE</fullName>
                </value>
                <value>
                    <fullName>Daily Animal Consumption - CFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overridden_Count__c</fullName>
        <label>Overridden Count</label>
        <summaryFilterItems>
            <field>Potential__c.overridden__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saleslogix_Account_ID__c</fullName>
        <label>Saleslogix Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Broiler</fullName>
                </value>
                <value>
                    <fullName>Layers</fullName>
                </value>
                <value>
                    <fullName>Other Poultry</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Ducks</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Annual_CFE_Con__c</fullName>
        <label>Total Annual CFE Con</label>
        <summarizedField>Potential__c.Annual_CFE_CON__c</summarizedField>
        <summaryFilterItems>
            <field>Potential__c.Competitor__c</field>
            <operation>equals</operation>
            <value>Cargill</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Annual_CFE__c</fullName>
        <label>Total Annual CFE</label>
        <summarizedField>Potential__c.Annual_CFE__c</summarizedField>
        <summaryFilterItems>
            <field>Potential__c.Competitor__c</field>
            <operation>equals</operation>
            <value>Cargill</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Volume_MT__c</fullName>
        <label>Total Annual Volume MT</label>
        <summarizedField>Potential__c.Annual_Volume_MT__c</summarizedField>
        <summaryFilterItems>
            <field>Potential__c.Competitor__c</field>
            <operation>equals</operation>
            <value>Cargill</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contribution__c</fullName>
        <label>Total Contribution</label>
        <summarizedField>Potential__c.Contribution__c</summarizedField>
        <summaryFilterItems>
            <field>Potential__c.Competitor__c</field>
            <operation>equals</operation>
            <value>Cargill</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Potential__c</fullName>
        <label>Total Potential</label>
        <summarizedField>Potential__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Potential__c.Competitor__c</field>
            <operation>equals</operation>
            <value>Cargill</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Volume__c</fullName>
        <label>Total Volume</label>
        <summarizedField>Potential__c.Volume__c</summarizedField>
        <summaryFilterItems>
            <field>Potential__c.Competitor__c</field>
            <operation>equals</operation>
            <value>Cargill</value>
        </summaryFilterItems>
        <summaryForeignKey>Potential__c.Master_Potential__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>share_of_CFE__c</fullName>
        <formula>( Total_Annual_CFE_Con__c  /  Total_Annual_CFE__c )</formula>
        <label>share of CFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>share_of_volume__c</fullName>
        <formula>( Total_Volume__c  /  Total_Annual_Volume_MT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>share of volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>share_of_wallet__c</fullName>
        <formula>(   Total_Contribution__c  /   Total_Potential__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>share of wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Master Potential</label>
    <nameField>
        <label>Master Potential  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Potentials</pluralLabel>
    <recordTypes>
        <fullName>Potential</fullName>
        <active>true</active>
        <label>Potential</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>